# chainsage

./: .env.example  README.md  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: ci.yml  pages.yml
config/: conservative.yaml
data/: bnb_daily.csv  btc_daily.csv  cake_daily.csv  manifest.json  twt_daily.csv
demo/: index.html  styles.css
demo/data/: bundle.json
docs/: submission.md
reports/: bnb_backtest.json  bnb_backtest.md  bnb_conservative_backtest.json  bnb_conservative_backtest.md  bnb_conservative_equity.html  bnb_conservative_trades.csv  bnb_equity.html  bnb_event_study.json  bnb_sensitivity.json  bnb_strategy_spec.json  bnb_trades.csv  btc_backtest.json  btc_backtest.md  btc_equity.html  btc_event_study.json  btc_sensitivity.json  btc_trades.csv  cake_backtest.json  cake_backtest.md  cake_conservative_backtest.json  cake_conservative_backtest.md  cake_conservative_equity.html  cake_conservative_trades.csv  cake_equity.html  cake_event_study.json  cake_sensitivity.json  cake_trades.csv  conservative_is_oos_headline.json  decision_log.jsonl  event_study.csv  institutional_risk.json  is_oos_headline.json  live_decision.json  research_report.md  twt_backtest.json  twt_backtest.md  twt_equity.html  twt_event_study.json  twt_sensitivity.json  twt_trades.csv  (+2 more)
scripts/: build_demo.py  generate_sample_data.py
skills/chainsage-conviction-gate/: SKILL.md
src/chainsage/: __init__.py  cli.py  demo_build.py  spec.py  verify.py
src/chainsage/adapters/: binance.py  cmc.py  fear_greed.py  indicators.py
tests/: test_chainsage.py
(+24 files in other folders)
